--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ckeditor/ckeditor5-dev-webpack-plugin": "^30.3.1",
     "@ckeditor/ckeditor5-editor-classic": "^34.2.0",
     "@ckeditor/ckeditor5-essentials": "^34.2.0",
+    "@ckeditor/ckeditor5-font": "^34.2.0",
     "@ckeditor/ckeditor5-heading": "^34.2.0",
     "@ckeditor/ckeditor5-image": "^34.2.0",
     "@ckeditor/ckeditor5-indent": "^34.2.0",
